--- a/index.html
+++ b/index.html
@@ -162,32 +162,65 @@
       {
         name: "최강창민",
         image: "min.jpg",
-        letter: `김진일 자문위원(멘토)님! 현직자강연 및 회식, 성수에서 파스타 먹은날, 오늘 기업탐방까지 짧지만 매 시간마다 진로에 관해 유익한 정보뿐 아니라 목표를 정하거나 접근하는 마인드 등 삶을 대하는 태도나 디테일한 목표를 설정하는 방법에 대해 정말로 많이 배운거같습니다. 과거의 경험은 뻔한 원론적인 얘기가 대부분이었지만, 위원님은 본인의 철학을 명확하게 갖고 계시고 이를 타인에게 쉽게 예시로 설명해주셔서 본받고 싶었습니다. 위원님의 철학을 참고하되 무작정 따라하지 말라는 말이 인상 깊었고, 기업은 돈을 버는 곳이며 내가 어떻게 기여할지를 말해야 한다는 조언도 깊이 남았습니다. 항상 건강 잘 챙기시고, 저도 후배들에게 베푸는 선배가 되겠습니다. 저번에 물엎질러서 죄송합니다 ㅜㅜ`
+        letter: `김진일 자문위원(멘토)님! 현직자강연 및 회식, 성수에서 파스타 먹은날, 오늘 기업탐방까지 짧지만 매 시간마다 진로에 관해 유익한 정보뿐 아니라 목표를 정하거나 접근하는 마인드 등 삶을 대하는 태도나 디테일한 목표를 설정하는 방법에 대해 정말로 많이 배운거같습니다. 사실 현직자를 만날기회가 흔치 않았지만 과거의 경험은 뻔한 원론적인 얘기가 대부분이었습니다. 하지만 위원님은 그런 얘기가 아닌 본인의 철학을 매우 명확하게 갖고 있고 이를 타인에게 쉽게 예시를 들며 납득할수 있도록 막힘없고 자신있게 말을 할수있는점이 정말 멋있었고 본받고 싶었습니다.  또한 자신의 철학을 스스로 가질수있도록 참고는 하되 위원님것을 그대로 다 받아들이지말라는것도 인성깊었고 기업은 돈을 버는곳이고 내가 그 회사에 어떤식으로 기여할것인지를 상세히 얘기해주신것과 강연당시 이것을 한달만 기억하고있어도 강연은 성공한것이라고 말씀하신것도 기억이 납니다. 제가 위원님의 일과를 자세히 알지는 못함에도 불구하고 정말 바빠 보이시는데도 항상 그전에 인연은 없었지만 모교후배라는 점, 진로의 분야가 비슷하다는 이유만으로 시간 내주시고 열정적으로 알려주시고 매시간마다 재밌기도 했어서 더 와닿았습니다. 위원님의 커리어를 위한 일도 중요하지만 항상 건강 잘 챙기셨으면 좋겠고 저도 배운거 잘 활용해서 나중에 후배들에게 베푸는 넓은 아량의 선배가 되도록 하겠습니다 ㅎㅎ. 꼭 무언가를 도움을 받기위해서 보는것보다 나중에 정말 편하게 저번처럼 식사할 자리가 있었으면 좋겠습니다! 저번에 물엎질러서 죄송합니다 ㅜㅜ`
       },
       {
         name: "광복이 (김현비)",
         image: "현비.jpg",
-        letter: `처음 자문위원님을 뵌 날이 기억이 납니다! 강의 내용도 신선했고, 벤치에서 인사에 대해 얘기하던 순간도 즐거웠습니다. 이후에도 꾸준히 학회와 교류해 주시고, 기업탐방에서도 좋은 내용 전달해 주셔서 정말 감사합니다. 자문위원님 덕분에 실무자의 역할과 내가 어떤 인사담당자가 되고 싶은지에 대한 고민을 시작할 수 있었습니다. 감사합니다 :)`
+        letter: `처음 자문위원님을 뵌 날이 기억이 납니다!! 강의 내용도 너무 신선했고, 벤치에서 다 같이 인사에 대해 얘기하고 알아가는 과정부터 너무 즐거웠습니다. 이후에도 꾸준히 학회와 교류를 맺어 주시고, 이번 기업탐방까지 야근에도 불구하고 양질의 내용을 전달해 주셔서 정말 감사합니다. 그 과정에서 저희가 정말 배운 것이 많습니다! 자문위원님 덕분에 인사 이론에서 벗어나 실무자로써 어떠한 역할을 수행할 수 있는지, 뭘 하고 싶은지에 대한 근본적인 고민을 시작할 수 있었습니다. 주신 가르침만큼 뛰어난 인사담당자가 되도록 노력하겠습니다. 감사합니다 ☺️`
       },
       {
         name: "이인석",
         image: "in.jpg",
-        letter: `To. 진일 멘토님 안녕하세요. 오늘 기업 탐방은 유료 컨설팅처럼 깊이 있고 알찼습니다. 멘토님만의 기업 준비 노하우를 체험하며 ‘이렇게 준비하는 거구나’를 깨달았습니다. 요리사의 비법처럼 쉽게 따라 할 수 없는 정성과 노력이 느껴졌고, 그것이 단순한 정보가 아닌 맞춤형 전략임을 알 수 있었습니다. 언젠가 저도 멘토님처럼 후배들에게 도움을 주고 싶다는 열정이 생겼습니다. 다음 기회에 꼭 다시 뵙고 싶습니다. 감사합니다!`
+        letter: `To. 진일 멘토님 
+안녕하세요.
+
+ 오늘 진행해주신 기업 탐방은 유료 컨설팅이라 해도 손색이 없을 만큼 깊이 있고 알찬 시간이었습니다.😄
+멘토님만의 기업 준비 노하우를 직접 체험할 수 있었던 덕분에, ‘기업 준비는 이렇게 해야 하는 거구나’ 하고 몸소 느낄 수 있었던 소중한 경험이었습니다. 진심으로 감사드립니다.🥹
+
+ 요리사들이 비법을 전수해주는 이유는 따라 하기 쉽지 않은 수고로움이 있기 때문이라는 이야기가 떠올랐습니다. 오늘 멘토님께서 전해주신 취업 준비 전략도 마찬가지라고 느꼈습니다.
+한 기업을 준비하기 위해 필요한 정성과 노력을 아낌없이 나눠주셨고, 그것이 단순한 정보가 아니라 해당 기업에 꼭 맞는 맞춤형 전략이라는 점을 다시금 깨달았습니다.😄
+
+ 멘토님의 진심 어린 말씀 덕분에, 저 또한 언젠가 멘토님처럼 제 후배들에게 도움을 주고 싶은 열정을 갖게 되었습니다. 참 뜻깊은 시간이었습니다.😀
+
+ 개인적으로 여쭤보고 싶은 질문도 있었지만, 시간 관계상 나누지 못해 아쉬움이 큽니다. 나중에 기회가 된다면 꼭 다시 여쭙고 싶습니다.🥺
+
+ 오늘 저희의 미래를 걱정하고 응원해주신 것처럼, 저도 멘토님의 앞날을 진심으로 응원하겠습니다.
+다시 한 번 감사드립니다!🫶🏻`
       },
       {
         name: "박해리",
         image: "ha.jpg.png",
-        letter: `3시간 넘는 시간 동안 좋은 말씀 나눠주셔서 감사합니다. 단순히 스펙을 준비하기보다 스스로 사고하고 인사이트를 쌓는 것의 중요성을 느낄 수 있었습니다. 다시 한 번 감사합니다!`
+        letter: ` 
+ 	
+3시간이 넘는 긴 시간 동안 후배들을 위해 좋은 말씀 나눠주셔서 감사합니다. 기계적으로 자기소개서를 작성하고, 면접을 연습하는 것보다 본인이 스스로 사고하며 인사이트를 넓혀가는 것이 얼마나 좋은 방법인지 깨달을 수 있었어요. 다시 한번 감사합니다!`
       },
       {
         name: "현지",
         image: "ji.png",
-        letter: `진일 멘토님께. 안녕하세요 :) 기업탐방에서 다시 뵐 수 있어 반가웠습니다. 짧은 시간이지만 멘토님을 여러 번 뵐 수 있었고, 그때마다 진심 어린 조언을 들을 수 있어 감사했습니다. 인사 직무에 대한 생각이 더 깊어지고 열정이 확장되는 느낌이었습니다. 스스로 고민하고 정리할 수 있도록 도와주셔서 많은 걸 배울 수 있었습니다. 감사합니다!`
+        letter: `진일 멘토님께
+
+멘토님, 안녕하세요 :)
+어제 기업탐방에서 또 뵐 수 있어 정말 반가웠습니다.
+바쁘실텐데 시간 내주시고, 챙겨주셔서 진심으로 감사드려요.
+
+짧은 기간이지만 여러 번 뵙고, 
+그때마다 좋은 말씀 들을 수 있어서 항상 감사한 마음입니다.
+멘토님을 뵐 때마다 인사 직무에 대한 생각이 더 깊어지고,
+스스로를 돌아보게 돼요. (열정이 더더욱 확장되는 느낌이에요!!)
+
+언제나 현실적인 조언을 해주시고,
+스스로 고민하고 정리할 수 있도록 도와주셔서 많은 걸 배울 수 있었습니다.
+
+항상 건강하시고, 또 곧 뵐 수 있기를 바랍니다 :)
+감사합니다!
+
+현지 드림`
       },
       {
         name: "이지섭",
         image: "js.jpg",
-        letter: `안녕하세요 멘토님. 경기대학교 미디어영상학과 18학번 이지섭입니다. 광고 분야에서 HR로 전환하며 조급함과 혼란이 있었는데 이번 기업탐방을 통해 큰 힌트를 얻었습니다. 멘토님의 방식은 저에게 신선한 충격이었고, 진로 고민을 풀 실마리를 주셨습니다. 마지막 학년에 접어들며 학회에 애정을 붙일 수 있었고, 남은 활동도 열심히 하겠습니다. 무더운 여름, 건강히 보내시길 바랍니다. 감사합니다 :D`
+        letter: `안녕하세요, 멘토님. 옆자리에 앉았던 경기대학교 미디어영상학과 18학번 이지섭이라고 합니다. 이제까지 광고 분야의 직무를 희망하여 관련된 사람들과 교류하고 직무 경험을 쌓았던 중 뒤늦게 HR에 관심을 가지게 되었습니다. 기존의 이력을 틀고 준비하는 것이기에 늦고 조급한 감도 있었고, 여러 인턴들에서 면접의 벽을 넘지 못하고 또 저 스스로도 과연 제가 희망하는 HR이 실무와 현실과 비슷한 그림인지가 의심스러웠던 차에 이번 기업 탐방을 듣게 되었는데요. 적잖은 신선한 충격에 고민들을 해소할 why가 보이기 시작한 것 같습니다. 혹여 그 날 너무 깐족대거나(?) 혹은 거만해보이거나, 무례해보이는 행동을 하지는 않았을까 걱정도 되지만 그 멘토님의 방식에 신선한 충격을 받아 액션이 나온 것이라고 여겨주시면 감사하겠습니다...ㅎㅎㅎ 사실 그동안 저는 학교에 애정을 붙이지 않고 학교 밖의 활동들에 몰두했는데, 뒤늦게 마지막 학년에 이 학회를 통해 애정을 붙일 수 있게 되었습니다. 뒤늦게 붙인 애정으로 더 정진해보려고 합니다. 그런 의미로 남은 하반기의 학회 활동에도 많은 관심 가져주세요! 유달리 날이 습고 덥해져 기운이 빠지는 시기인데, 올 여름 무사히 그리고 편안히 보내시길 바라겠습니다. 감사합니다 :D`
       }
     ];
 
