--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
       },
        {
         name: "강정이",
-        image: "me.png",
+        image: "me.jpeg",
         letter: `김진일 멘토님께
         
         안녕하세요 자문위원님! 저는 본명은 강은정,,,부캐..?별명..?강정이..닭강정이입니다.
