--- a/index.html
+++ b/index.html
@@ -141,6 +141,10 @@
   </style>
 </head>
 <body>
+  <audio autoplay loop>
+    <source src="https://cdn.pixabay.com/download/audio/2022/10/20/audio_a9560b46b7.mp3?filename=inspiring-cinematic-piano-and-strings-11755.mp3" type="audio/mp3">
+    브라우저가 오디오 태그를 지원하지 않습니다.
+  </audio>
   <div class="container">
     <div class="header">
       <div class="date-loc">2025.06.26 성수 이그니스<br />KAH 인사학회 올림</div>
