--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 <!-- 감동적인 브금 (수동재생) -->
 <div style="display: flex; justify-content: center; margin: 20px 0;">
   <iframe width="300" height="170"
-    src="https://www.youtube.com/embed/dYIT_jeUBKg?autoplay=1&loop=1&playlist=dYIT_jeUBKg"
+    src="https://youtu.be/2dFwndi4ung?si=DK6wpRpVaq8UlW-1"
     title="YouTube video player"
     frameborder="0"
     allow="autoplay; encrypted-media"
