--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 <!-- 감동적인 브금 (수동재생) -->
 <div style="display: flex; justify-content: center; margin: 20px 0;">
   <iframe width="300" height="170"
-    src="https://youtu.be/2dFwndi4ung?si=DK6wpRpVaq8UlW-1"
+    src="https://youtu.be/VXp2dCXYrvQ?si=1XDEx1pYmtGXoD49"
     title="YouTube video player"
     frameborder="0"
     allow="autoplay; encrypted-media"
