--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
       },
       {
         name: "이지섭",
-        image: "js.jpg",
+        image: "js.jpeg",
         letter: `안녕하세요, 멘토님. 옆자리에 앉았던 경기대학교 미디어영상학과 18학번 이지섭이라고 합니다. 
         이제까지 광고 분야의 직무를 희망하여 관련된 사람들과 교류하고 직무 경험을 쌓았던 중 뒤늦게 HR에 관심을 가지게 되었습니다. 
         기존의 이력을 틀고 준비하는 것이기에 늦고 조급한 감도 있었고, 여러 인턴들에서 면접의 벽을 넘지 못하고 또 저 스스로도 과연 제가 희망하는 HR이 실무와 현실과 비슷한 그림인지가 의심스러웠던 차에 이번 기업 탐방을 듣게 되었는데요. 
