--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
       <div class="date-loc">2025.06.26 성수 이그니스<br />KAH 인사학회 올림</div>
       <div class="title">Dear 김진일 자문위원님</div>
     </div>
-    <div class="subtitle">작지만 마음은 가득 담아 보냅니다. 🌟<br />바쁘신 가운데 나눈 귀한 시간, 고이 담아 보내드립니다.💌</div>
+    <div class="subtitle">작지만 마음만은 626%!! 🌟<br />바쁘신 가운데 나눈 귀한 시간, 고이 담아 보내드립니다.💌</div>
     <div class="people-row" id="people-row"></div>
     <div class="footer-note">Good luck always </div>
   </div>
